Mensaje de combates

--- a/mokepon.html
+++ b/mokepon.html
@@ -30,8 +30,8 @@
         <button id="btn-agua">Agua 💧</button>
         <button id="btn-tierra">Tierra🍃</button>
     </section>
-    <section id="panel-mjs">
-        <p>Tu mascota ataco con Fuego , las mascotas del enemigo atacó con Tierra !!!Yupiiiiii GANASTE!!!!🎉🥳🎉🥳</p>
+    <section id="mensaje">
+
         <button id="btn-reinicio">Reiniciar</button>
     </section>
 
