--- a/mokepon.html
+++ b/mokepon.html
@@ -23,17 +23,17 @@
     </section>
     <section id="ataques">
         <h2>Elige tu ataque:</h2>
-        <p>Tu mascota <span id="mascota-jugador"></span> tiene <span>3</span> vidas</p>
-        <p>Las mascotas <span id="mascotas-enemigo"></span> del enemigo tiene <span>3</span> vidas</p>
+        <p>Tu mascota <span id="mascota-jugador"></span> tiene  <span id="vidas-jugador">3</span> vidas </p>
+        <p>La mascota <span id="mascotas-enemigo"></span> del enemigo tiene   <span id="vidas-enemigo">3</span> vidas</p>
 
         <button id="btn-fuego">Fuego 🔥</button>
         <button id="btn-agua">Agua 💧</button>
         <button id="btn-tierra">Tierra🍃</button>
     </section>
     <section id="mensaje">
-
-        <button id="btn-reinicio">Reiniciar</button>
     </section>
+    <br>
+    <button id="btn-reinicio">Reiniciar</button>
 
 </body>
 </html>
