--- a/mokepon.html
+++ b/mokepon.html
@@ -43,7 +43,7 @@
                     <section id="mensajes">
                     </section> 
                     <section id="reiniciar">
-                        <button id="boton-reiniciar">Reiniciar</button>
+                        <button id="boton-reiniciar">Jugar de nuevo</button>
                     </section>
                 </div>
                 <div class="mensajes-vidas">
