--- a/mokepon.html
+++ b/mokepon.html
@@ -12,46 +12,56 @@
     <section id="seleccionar-mascota">
         <h1 class="titulo">Mokepon</h1>
         <h2 class="subtitulo">Elige tu mascota:</h2>
+
         <div class="tarjetas">
             <input  type="radio" name="mascota" id="charmeleon" />
             <label class="tarjeta-de-mokepon" for="charmeleon">
                 <p>Charmeleon</p>
-            <img src="./imagenes/charmeleon.png" alt="Charmeleon">
+                <img src="./imagenes/charmeleon.png" alt="Charmeleon">
             </label>
             <input type="radio" name="mascota" id="wartortle" />
             <label class="tarjeta-de-mokepon" for="wartortle">
                 <p>Wartortle</p>
-            <img src="./imagenes/wartortle.png" alt="Wartortle">
+                <img src="./imagenes/wartortle.png" alt="Wartortle">
             </label>
             <input type="radio" name="mascota" id="diglett" />
             <label class="tarjeta-de-mokepon" for="diglett">
                 <p>Diglett</p>
-            <img src="./imagenes/diglett.png" alt="Diglett" class="diglett">
+                <img src="./imagenes/diglett.png" alt="Diglett" class="diglett">
             </label>
         </div>
+
         <button id="boton-mascota">Seleccionar</button>
         </section class ='ataques'>
+
             <section id="seleccionar-ataque">
                 <h1 class="titulo">MOKEPON! 🔥💧🍃</h1>
                 <h2 class="subtitulo">Elige tu ataque:</h2>
-                <div class="btn-ataques">
+                <div class="boton-de-ataques">
                     <button class="boton-ataques" id="boton-fuego">Fuego 🔥</button>
                     <button class="boton-ataques"id="boton-agua">Agua 💧</button>
                     <button class="boton-ataques" id="boton-tierra">Tierra 🍃 </button>
                 </div>
-                <div>
+                <div >
                     <section id="mensajes">
+                        <p class="resultado">A jugar, Mucha suerte</p>
                     </section> 
+
                     <section id="reiniciar">
                         <button id="boton-reiniciar">Jugar de nuevo</button>
                     </section>
                 </div>
-                <div class="mensajes-vidas">
+                
+                <div class="ataques">
                     <article class="carta-jugador">
-                        <p >Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
+                        <p id="vidas-jugador">3</p>
+                        <p id="mascota-jugador"></p>
+                        <p id="ataques-del-jugador"></p>
                     </article>
                     <article class="carta-enemigo">
-                        <p >La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
+                        <p id="vidas-enemigo">3</p>
+                        <p id="mascota-enemigo"></p>
+                        <p id="ataques-del-enemigo"></p>
                     </article> 
                 </div>
     </section>
