--- a/mokepon.html
+++ b/mokepon.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokepon!</title>
-    <script src="./js/mokepon.js"></script>
+
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -44,10 +44,10 @@
                 </div>
                 <div >
                     <section id="mensajes">
-                        <p class="resultado">A jugar, Mucha suerte</p>
+                        <p  id ="resultado" class="resultado">A jugar, Mucha suerte</p>
                     </section> 
 
-                    <section id="reiniciar">
+                    <section class="reiniciar" id="reiniciar">
                         <button id="boton-reiniciar">Jugar de nuevo</button>
                     </section>
                 </div>
@@ -65,5 +65,6 @@
                     </article> 
                 </div>
     </section>
+    <script src="./js/mokepon.js"></script>
 </body>
 </html>
