Creacion de tarjeta en js

--- a/index.html
+++ b/index.html
@@ -13,23 +13,7 @@
         <h1 class="titulo">Mokepon</h1>
         <h2 class="subtitulo">Elige tu mascota:</h2>
 
-        <div class="tarjetas">
-            <input  type="radio" name="mascota" id="charmeleon" />
-            <label class="tarjeta-de-mokepon" for="charmeleon">
-                <p>Charmeleon</p>
-                <img src="./imagenes/charmeleon.png" alt="Charmeleon">
-            </label>
-            <input type="radio" name="mascota" id="wartortle" />
-            <label class="tarjeta-de-mokepon" for="wartortle">
-                <p>Wartortle</p>
-                <img src="./imagenes/wartortle.png" alt="Wartortle">
-            </label>
-            <input type="radio" name="mascota" id="diglett" />
-            <label class="tarjeta-de-mokepon" for="diglett">
-                <p>Diglett</p>
-                <img src="./imagenes/diglett.png" alt="Diglett" class="diglett">
-            </label>
-        </div>
+        <div class="tarjetas"></div>
 
         <button id="boton-mascota">Seleccionar</button>
         </section class ='ataques'>
@@ -65,6 +49,6 @@
                     </article> 
                 </div>
     </section>
-    <script src="./js/mokepon.js"></script>
+    <script  type="module" src="./js/index.js"></script>
 </body>
 </html>
