--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
             <section id="seleccionar-ataque">
                 <h1 class="titulo">MOKEPON! 🔥💧🍃</h1>
                 <h2 class="subtitulo">Elige tu ataque:</h2>
-                <div class="boton-de-ataques">
-                    <button class="boton-ataques" id="boton-fuego">Fuego 🔥</button>
-                    <button class="boton-ataques"id="boton-agua">Agua 💧</button>
-                    <button class="boton-ataques" id="boton-tierra">Tierra 🍃 </button>
-                </div>
+                <div id="ataques" class="boton-de-ataques"></div>
                 <div >
                     <section id="mensajes">
                         <p  id ="resultado" class="resultado">A jugar, Mucha suerte</p>
