--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 
                 <div class="ataques">
                     <article class="carta-jugador">
-                        <p id="vidas-jugador">3</p>
+                        <p id="vidas-jugador"></p>
                         <p id="mascota-jugador"></p>
                         <p id="ataques-del-jugador"></p>
                     </article>
                     <article class="carta-enemigo">
-                        <p id="vidas-enemigo">3</p>
+                        <p id="vidas-enemigo"></p>
                         <p id="mascota-enemigo"></p>
                         <p id="ataques-del-enemigo"></p>
                     </article> 
